assets/css/style.css
/* Fonts / General */
@import url("https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700");

html {
  /* currently not fully supported in all browsers */
  scroll-behavior: smooth;
}

body {
  font-family: "Roboto", sans-serif;
  font-weight: 400;
  background-color: #c3c1ce;
}

/* colors */
.bg-lgrey {
  background-color: rgb(185, 185, 185);
}

.bg-dblue {
  background-color: #0062a5;
}

.txt-light {
  color: #eae9f2;
}

/* //default col */
.navbar-dark .navbar-nav .nav-link {
  color: #eae9f2de;
}

.navbar-dark .navbar-nav .nav-link:hover,
.navbar-dark .navbar-nav .nav-link:focus {
  color: #eae9f2;
  font-weight: 300;
}

.navbar-dark .nav-item > .nav-link.active {
  color: #eae9f2;
  font-weight: 300;
  font-size: 1.1em;
}
/* Header / Jumbotron / Navbar */
#home {
  background-image: url("../images/cover-2.jpg");
  background-position: bottom;
  background-attachment: fixed;
  background-size: cover;
  height: 95vh;
  margin-bottom: 0;
  z-index: 1;
}

#home nav {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  z-index: 1;
}

.navbar .navbar-collapse {
  text-align: center;
}

.navbar {
  padding: 0;
  font-weight: 200;
}

#nav-menu ul {
  padding-right: 10%;
}
/* Logo */

#logo {
  padding-left: 5%;
  padding-bottom: 15px;
}

/* .nav-item:hover > a {
  font-weight: 600;
} */

.navbar-brand span {
  font-size: 24px;
  font-weight: 300;
  padding-left: 6px;
  letter-spacing: 1px;
}

/* Header Title */

.txt-header-title {
  position: absolute;
  top: 8vh;
}

.txt-header-title h1 {
  font-size: 50px;
  font-weight: 200;
}

/* About */

#about {
  padding: 4em 2em;
}

#about .card {
  text-align: center;
  border-radius: 10px;
  height: 100%;
}

#about .card-body h5 {
  text-transform: uppercase;
  font-weight: 300;
}

.place-card {
  padding: 2em;
}

.card-img-top {
  padding: 5px;
  border-radius: 10px;
}

/* testimonials review section */
.testimonials {
  padding-top: 0;
  padding-left: 10%;
  padding-right: 10%;
}

.testimonials i {
  color: grey;
  font-size: 1.5em;
}

.review-text {
  margin-top: 2em;
}

/* services */

.product-size img {
  padding: 0;
  border-radius: 5px;
  margin-top: 5px;
  width: 98%;
}

#services .card-body h5 {
  text-transform: uppercase;
  font-weight: 300;
}

#services .card {
  border-radius: 10px;
}

#services {
  padding: 4em 2em;
}

/* contact */

.address {
  text-align: center;
}

#map iframe {
  border-radius: 5px;
  border: solid 2px;
  width: 100%;
  height: 60vh;
}

.address i {
  color: grey;
  font-size: 0.5em;
  vertical-align: middle;
  padding: 5px;
}

.form-border {
  border-radius: 5px;
  border: 1px solid grey;
}

.form-style {
  border-radius: 5px;
}

/* footer */

.social li {
  list-style: none;
}

.icon {
  font-size: 30px;
}

/* #services {
  background-color: red;
}

#about {
  background-color: green;
}

#contact {

  background-color: blue;
}

#footer {

  background-color: rgb(218, 255, 9);
} */

/* media queries */

/* @media (min-width: 2300px) {
  .txt-header-title {
    position: absolute;
    top: 80vh;

  }

  .txt-header-title h1 {
    font-size: 60px;
    font-weight: 200;
  }
}



@media (max-width: 640px) {

  .txt-header-title h1 {
    font-size: 2em;
    padding-top: 0.5em;
  }


}

@media (max-width: 576px) {
  .navbar-brand span {
    font-size: 1em;
    font-weight: 300;
    padding-left: 6px;
    letter-spacing: 1px;
  }

  #about .card {
    padding: 5px;
  }


  .txt-header-title h1 {
    font-size: 1.5em;
    padding-top: 0.5em;
  }

  .review {
    font-size: 0.8em;
    margin-bottom: 10%;
  }

} */

/* @media(max-width:321px) {


  .txt-header-title h1 {
    font-size: 1.5em;
    padding-top: 0.5em;

  }

  .about-card {
    padding-top: 10%;
  }

  .review {
    font-size: 0.8em;
    margin-bottom: 10%;
  }

} */

